Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8175198/AnnotationsAndFormalParamsTest.out
AnnotationsAndFormalParamsTest.java:9:19: compiler.err.intf.annotation.members.cant.have.params
AnnotationsAndFormalParamsTest.java:10:44: compiler.err.intf.annotation.members.cant.have.params
2 errors
