Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8175198/AnnotationsAndFormalParamsTest.java
/*
 * @test /nodynamiccopyright/
 * @bug 8175198
 * @summary Javac incorrectly allows receiver parameters in annotation methods
 * @compile/fail/ref=AnnotationsAndFormalParamsTest.out -XDrawDiagnostics -Werror -Xlint:unchecked AnnotationsAndFormalParamsTest.java
 */

@interface AnnotationsAndFormalParamsTest {
    int value(int i);
    int foo(AnnotationsAndFormalParamsTest this);
}
